--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Stackedited</title>
+  <title>StackediTED - A Fever Dream Markdown Editor</title>
   <link rel="canonical" href="https://stackedit.io/app">
-  <meta name="description" content="Free, open-source, full-featured Markdown editor.">
+  <meta name="description" content="StackediTED - A fever dream remix of a markdown editor with Ted, your slightly unhinged AI assistant. A Fladry Creative experiment.">
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="author" content="Fladry Creative">
+  <meta name="keywords" content="markdown, editor, AI, assistant, Ted, fever dream, creative, experimental">
 </head>
 
 <body>
